# cool-app-bazel

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE  platform_mappings
.github/workflows/: ci.yml
ios/app/: BUILD.bazel
ios/app/src/: Application.swift  Info.plist
ios/app/test/: ApplicationTests.swift
ios/cool/app/: BUILD.bazel
ios/cool/app/src/: Application.swift
ios/cool/profile/: BUILD.bazel
ios/cool/root_view/: BUILD.bazel
ios/cool/root_view/src/: AppView.swift
ios/cool/root_view/test/: AppViewTests.swift
ios/derived_srcs/app/: AppDelegate.swift  BUILD.bazel  Info.plist  SceneDelegate.swift  ViewController.swift
ios/derived_srcs/numerics/real/: BUILD.bazel
ios/derived_srcs/numerics/shims/: BUILD.bazel
ios/profile/: BUILD.bazel
ios/root_view/: BUILD.bazel
ios/root_view/test/: AppModuleTests.swift  AppViewTests.swift
tools/bazel_support/: apple.bzl
