"""
module workspace
"""
module(name = "cool-app", version = "")

bazel_dep(name = "apple_support", version = "1.9.0", repo_name = "build_bazel_apple_support")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "rules_apple", version = "3.0.0-rc2", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_cc", version = "0.0.8")
bazel_dep(name = "rules_python", version = "0.25.0")
bazel_dep(name = "rules_swift", version = "1.11.0", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_xcodeproj", version = "1.10.1")

ext_xplat_repositories = use_extension("//third_party:repositories.bzl", "ext_xplat_repositories")
use_repo(ext_xplat_repositories, "firebase")
