load("@//tools/bazel_support:apple.bzl", "dbx_apple_library")
load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application", "ios_unit_test")
load("@build_bazel_rules_apple//apple:versioning.bzl", "apple_bundle_version")
load("@rules_xcodeproj//xcodeproj:defs.bzl", "xcodeproj")

apple_bundle_version(
    name = "version",
    build_version = "0.1.0",
    short_version_string = "0.1",
)

ios_application(
    name = "app",
    app_icons = glob(["src/Assets.xcassets/AppIcon.appiconset/**"]),
    bundle_id = "com.sky.CoolApp",
    bundle_name = "CoolApp",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["src/Info.plist"],
    minimum_os_version = "16.4",
    resources = glob(
        ["src/Assets.xcassets/**"],
        exclude = ["src/Assets.xcassets/AppIcon.appiconset/**"],
    ),
    strings = glob(["src/*.lproj/Localizable.strings"]),
    version = ":version",
    visibility = [
        "@rules_xcodeproj//xcodeproj:generated",
    ],
    deps = [":app_lib"],
)

dbx_apple_library(
    name = "app_lib",
    srcs = glob(["src/**/*.swift"]),
    module_name = "CoolApp",
    deps = [
        "//ios/cool/root_view",
        "@firebase//:FirebaseAnalyticsSwift",
    ],
)

dbx_apple_library(
    name = "app_lib_tests_lib",
    testonly = True,
    srcs = glob(["test/**/*.swift"]),
    module_name = "CoolAppLibTests",
    deps = [":app_lib"],
)

ios_unit_test(
    name = "app_lib_tests",
    minimum_os_version = "16.4",
    visibility = ["@rules_xcodeproj//xcodeproj:generated"],
    deps = [":app_lib_tests_lib"],
)

xcodeproj(
    name = "xcodeproj",
    build_mode = "bazel",
    project_name = "CoolApp",
    tags = ["manual"],
    top_level_targets = [
        ":app",
        ":app_lib_tests",
    ],
)
