load("@//tools/bazel_support:apple.bzl", "dbx_apple_library")
load("@build_bazel_rules_apple//apple:ios.bzl", "ios_unit_test")

dbx_apple_library(
    name = "root_view",
    srcs = glob(["src/**/*.swift"]),
    module_name = "ios_cool_root_view",
    visibility = ["//ios/cool/app:__subpackages__"],
    deps = [],
)

dbx_apple_library(
    name = "root_view_tests_library",
    testonly = True,
    srcs = glob(["test/**/*.swift"]),
    module_name = "ios_cool_root_view_tests",
    deps = [":root_view"],
)

ios_unit_test(
    name = "root_view_tests",
    minimum_os_version = "16.4",
    deps = [":root_view_tests_library"],
)
