load("@//tools/bazel_support:apple.bzl", "dbx_apple_library")

dbx_apple_library(
    name = "real",
    srcs = [
        "AlgebraicField.swift",
        "ApproximateEquality.swift",
        "AugmentedArithmetic.swift",
        "Double+Real.swift",
        "ElementaryFunctions.swift",
        "Float+Real.swift",
        "Float16+Real.swift",
        "Float80+Real.swift",
        "Real.swift",
        "RealFunctions.swift",
    ],
    module_name = "Numerics",
    visibility = ["//ios/derived_srcs:__subpackages__"],
    deps = ["//ios/derived_srcs/numerics/shims"],
)
